Feature/pbac (#718)
* Added authorization module for PBAC

---------

Co-authored-by: Ivo Zaal <ivo.zaal@ritense.com>
Co-authored-by: Theo <theo.beers@ritense.com>
Co-authored-by: Klaas Schuijtemaker <94360980+Klaas-Ritense@users.noreply.github.com>
Co-authored-by: theo-ritense <95682624+theo-ritense@users.noreply.github.com>